// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Panels renders an error panel as an alert 1`] = `
<DocumentFragment>
  <section
    class="rounded-md border border-red-300 bg-white p-6 text-red-700 shadow-lg dark:border-red-700 dark:bg-red-900 dark:text-red-100"
    role="alert"
  >
    <p>
      We could not load matching flights.
    </p>
  </section>
</DocumentFragment>
`;

exports[`Panels renders an info panel 1`] = `
<DocumentFragment>
  <section
    class="rounded-md border border-gray-300 bg-white p-6 text-gray-950 shadow-sm dark:border-gray-700 dark:bg-gray-800 dark:text-gray-50"
  >
    <h2
      class="text-lg font-semibold"
    >
      Search for a route to compare fares.
    </h2>
  </section>
</DocumentFragment>
`;
